src/test/ui/str/str-mut-idx.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/str-mut-idx.rs:4:15
   |
LL | fn bot<T>() -> T { loop {} }
   |    --- - required by this bound in `bot`
...
LL |     s[1..2] = bot();
   |               ^^^ doesn't have a size known at compile-time
   |
   = help: within `str`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `str`

error[E0277]: the type `str` cannot be indexed by `usize`
  --> $DIR/str-mut-idx.rs:6:5
   |
LL |     s[1usize] = bot();
   |     ^^^^^^^^^ string indices are ranges of `usize`
   |
   = help: the trait `std::slice::SliceIndex<str>` is not implemented for `usize`
   = note: required because of the requirements on the impl of `std::ops::Index<usize>` for `str`

error[E0277]: the type `str` cannot be indexed by `{integer}`
  --> $DIR/str-mut-idx.rs:8:15
   |
LL |     s.get_mut(1);
   |               ^ string indices are ranges of `usize`
   |
   = help: the trait `std::slice::SliceIndex<str>` is not implemented for `{integer}`
   = note: you can use `.chars().nth()` or `.bytes().nth()`
           see chapter in The Book <https://doc.rust-lang.org/book/ch08-02-strings.html#indexing-into-strings>

error[E0277]: the type `str` cannot be indexed by `{integer}`
  --> $DIR/str-mut-idx.rs:10:25
   |
LL |     s.get_unchecked_mut(1);
   |                         ^ string indices are ranges of `usize`
   |
   = help: the trait `std::slice::SliceIndex<str>` is not implemented for `{integer}`
   = note: you can use `.chars().nth()` or `.bytes().nth()`
           see chapter in The Book <https://doc.rust-lang.org/book/ch08-02-strings.html#indexing-into-strings>

error[E0277]: the type `str` cannot be indexed by `char`
  --> $DIR/str-mut-idx.rs:12:5
   |
LL |     s['c'];
   |     ^^^^^^ string indices are ranges of `usize`
   |
   = help: the trait `std::slice::SliceIndex<str>` is not implemented for `char`
   = note: required because of the requirements on the impl of `std::ops::Index<char>` for `str`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
